--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -78,6 +78,48 @@
 
 {{#unless isOwnProfile}}
 {{#if loggedIn}}
+{{#if flagsFromTrustedUsers}}
+<div class="message w-100 my-2" style="text-align:center;">
+  <i class="fas fa-exclamation-triangle"></i>
+  {{flagsFromTrustedUsers}} {{plural flagsFromTrustedUsers 'person/people'}} you trust
+  {{plural flagsFromTrustedUsers 'has/have'}} flagged this user.
+</div>
+{{/if}}
+{{#if muted}}
+<div class="message w-100 my-2" style="text-align:center;">
+  <i class="fas fa-comment-slash"></i>
+  You have muted this user. Their posts are hidden from you.
+</div>
+{{/if}}
+{{/if}}
+{{/unless}}
+
+{{#if this.mutualTrusts}}
+<div class="message w-100 my-2" style="text-align:center;">
+  Trusted by <strong>{{this.mutualTrusts.length}}</strong> {{plural this.mutualTrusts.length 'person/people'}} you trust
+</div>
+{{/if}}
+
+{{#if this.mutualFollows}}
+<div class="message w-100 my-2" style="text-align:center;">
+  Followed by <strong>{{this.mutualFollows.length}}</strong> {{plural this.mutualFollows.length 'person/people'}} you
+  follow
+</div>
+{{/if}}
+
+{{#if this.mutualCommunities}}
+<div class="message w-100 my-2" style="text-align:center;">
+  In <strong>{{this.mutualCommunities.length}}</strong> {{plural this.mutualCommunities.length 'community/communities'}}
+  with you
+</div>
+{{/if}}
+
+<button type="button" id="toggle-connections" class="button full-width-button user-panel-link"
+  data-target="#connectionsBody" data-shown="false" data-shown-text="<i class='fas fa-users'></i> Hide all connections"
+  data-hidden-text="<i class='fas fa-users'></i> See all connections">
+  <i class="fas fa-users"></i> See all connections
+</button>
+
 <div id="userActionsButtons" class="mb-2">
   {{#if followed}}
   <button type="button" id="unfollowButton" class="button grey-button"><i class="fas fa-satellite-dish"></i>
@@ -114,99 +156,7 @@
     {{/if}}
   </div>
 </div>
-{{#if flagsFromTrustedUsers}}
-<div class="message w-100 my-2" style="text-align:center;">
-  <i class="fas fa-exclamation-triangle"></i>
-  {{flagsFromTrustedUsers}} {{plural flagsFromTrustedUsers 'person/people'}} you trust
-  {{plural flagsFromTrustedUsers 'has/have'}} flagged this user.
-</div>
-{{/if}}
-{{#if muted}}
-<div class="message w-100 my-2" style="text-align:center;">
-  <i class="fas fa-comment-slash"></i>
-  You have muted this user. Their posts are hidden from you.
-</div>
-{{/if}}
-{{/if}}
-{{/unless}}
 
-{{#and loggedIn trustedUserData }}
-{{#or userTrustsYou isOwnProfile}}
-<h5>Trusts{{#gt trustedUserData.length 30}} <a class="user-list-toggle collapsed" href="#trustedUsersList"
-    data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedUsersList"><i
-      class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-<div id="trustedUsersList" class="user-list{{#gt trustedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
-  {{#each trustedUserData}}
-  <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-      src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-  {{/each}}
-  <div style="height:10px;width:100%;"></div>
-</div>
-{{/or}}
-{{/and}}
-{{#and loggedIn usersWhoTrustThemData.length }}
-<h5>Trusted by{{#gt usersWhoTrustThemData.length 30}} <a class="user-list-toggle collapsed" href="#trustedByUsersList"
-    data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedByUsersList"><i
-      class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-<div id="trustedByUsersList" class="user-list{{#gt usersWhoTrustThemData.length 30}} collapse{{else}} d-flex{{/gt}}">
-  {{#each usersWhoTrustThemData}}
-  <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-      src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-  {{/each}}
-  <div style="height:10px;width:100%;"></div>
-</div>
-{{/and}}
-{{#if followedUserData}}
-<h5>Follows{{#gt followedUserData.length 30}} <a class="user-list-toggle collapsed" href="#followedUsersList"
-    data-toggle="collapse" role="button" aria-expanded="false" aria-controls="followedUsersList"><i
-      class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-<div id="followedUsersList" class="user-list{{#gt followedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
-  {{#each followedUserData}}
-  <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-      src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-  {{/each}}
-  <div style="height:10px;width:100%;"></div>
-</div>
-{{/if}}
-{{#if followersData}}
-<h5>Followed by{{#gt followersData.length 30}} <a class="user-list-toggle collapsed" href="#followersList"
-    data-toggle="collapse" role="button" aria-expanded="false" aria-controls="followersList"><i
-      class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-<div id="followersList" class="user-list{{#gt followersData.length 30}} collapse{{else}} d-flex{{/gt}}">
-  {{#each followersData}}
-  <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-      src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-  {{/each}}
-  <div style="height:10px;width:100%;"></div>
-</div>
-{{/if}}
-{{#if isOwnProfile}}
-{{#if flaggedUserData}}
-<h5>Flagged users{{#gt flaggedUserData.length 30}} <a class="user-list-toggle collapsed" href="#flaggedUsersList"
-    data-toggle="collapse" role="button" aria-expanded="false" aria-controls="flaggedUsersList"><i
-      class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-<div id="flaggedUsersList" class="user-list{{#gt flaggedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
-  {{#each flaggedUserData}}
-  <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-      src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-  {{/each}}
-  <div style="height:10px;width:100%;"></div>
-</div>
-{{/if}}
-{{/if}}
-
-{{#if communitiesData}}
-<h5>Communities{{#gt communitiesData.length 30}} <a class="user-list-toggle collapsed" href="#communitiesList"
-    data-toggle="collapse" role="button" aria-expanded="false" aria-controls="communitiesList"><i
-      class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-<div id="communitiesList" class="user-list{{#gt communitiesData.length 30}} collapse{{else}} d-flex{{/gt}}">
-  {{#each communitiesData}}
-  <a href="/community/{{this.slug}}" data-tooltip="{{this.name}}" class="tooltip-top"><img
-      src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/communities/cake.svg{{/if}}" /></a>
-  {{/each}}
-  <div style="height:10px;width:100%;"></div>
-</div>
-{{/if}}
 <script>
   $('.user-list.collapse').on('hide.bs.collapse', function () {
     $(this).prev().find(".user-list-toggle")[0].innerHTML = '<i class="fas fa-caret-right"></i>';
