--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -36,85 +36,111 @@
       {{/eq}}
       {{/if}}
     </div>
-    <div id="connectionsBody" class="user-container">
+    <div id="connectionsBody" class="simple-panel user-container">
       <h3 class="page-header mx-2">Connections</h3>
       {{#and loggedIn trustedUserData }}
       {{#or userTrustsYou isOwnProfile}}
-      <h5>Trusts{{#gt trustedUserData.length 30}} <a class="user-list-toggle collapsed" href="#trustedUsersList"
-          data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedUsersList"><i
-            class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-      <div id="trustedUsersList" class="user-list{{#gt trustedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
+      <h4>Trusts</h4>
+      <div class="compact-container">
         {{#each trustedUserData}}
-        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-            src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+          <div class="content-box">
+            <div class="content-box-header">
+                <img class="postAuthorImage mr-2" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                {{#if this.displayName}}
+                  <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
+                {{else}}
+                  <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
+                {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
+            </div>
+          </div>
         {{/each}}
-        <div style="height:10px;width:100%;"></div>
       </div>
       {{/or}}
       {{/and}}
       {{#and loggedIn usersWhoTrustThemData.length }}
-      <h5>Trusted by{{#gt usersWhoTrustThemData.length 30}} <a class="user-list-toggle collapsed" href="#trustedByUsersList"
-          data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedByUsersList"><i
-            class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-      <div id="trustedByUsersList" class="user-list{{#gt usersWhoTrustThemData.length 30}} collapse{{else}} d-flex{{/gt}}">
+      <h4>Trusted by</h4>
+      <div class="compact-container">
         {{#each usersWhoTrustThemData}}
-        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-            src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+          <div class="content-box">
+            <div class="content-box-header">
+                <img class="postAuthorImage mr-2" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                {{#if this.displayName}}
+                  <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
+                {{else}}
+                  <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
+                {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
+            </div>
+          </div>
         {{/each}}
-        <div style="height:10px;width:100%;"></div>
       </div>
       {{/and}}
       {{#if followedUserData}}
-      <h5>Follows{{#gt followedUserData.length 30}} <a class="user-list-toggle collapsed" href="#followedUsersList"
-          data-toggle="collapse" role="button" aria-expanded="false" aria-controls="followedUsersList"><i
-            class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-      <div id="followedUsersList" class="user-list{{#gt followedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
-        {{#each followedUserData}}
-        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-            src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-        {{/each}}
-        <div style="height:10px;width:100%;"></div>
+      <h4>Follows</h4>
+      <div class="compact-container">
+      {{#each followedUserData}}
+        <div class="content-box">
+            <div class="content-box-header">
+                <img class="postAuthorImage mr-2" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                {{#if this.displayName}}
+                  <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
+                {{else}}
+                  <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
+                {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
+            </div>
+          </div>
+      {{/each}}
       </div>
       {{/if}}
       {{#if followersData}}
-      <h5>Followed by{{#gt followersData.length 30}} <a class="user-list-toggle collapsed" href="#followersList"
-          data-toggle="collapse" role="button" aria-expanded="false" aria-controls="followersList"><i
-            class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-      <div id="followersList" class="user-list{{#gt followersData.length 30}} collapse{{else}} d-flex{{/gt}}">
-        {{#each followersData}}
-        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-            src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-        {{/each}}
-        <div style="height:10px;width:100%;"></div>
+      <h4>Followed by</h4>
+      <div class="compact-container">
+      {{#each followersData}}
+        <div class="content-box">
+            <div class="content-box-header">
+                <img class="postAuthorImage mr-2" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                {{#if this.displayName}}
+                  <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
+                {{else}}
+                  <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
+                {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
+            </div>
+          </div>
+      {{/each}}
       </div>
       {{/if}}
       {{#if isOwnProfile}}
       {{#if flaggedUserData}}
-      <h5>Flagged users{{#gt flaggedUserData.length 30}} <a class="user-list-toggle collapsed" href="#flaggedUsersList"
-          data-toggle="collapse" role="button" aria-expanded="false" aria-controls="flaggedUsersList"><i
-            class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-      <div id="flaggedUsersList" class="user-list{{#gt flaggedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
-        {{#each flaggedUserData}}
-        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img
-            src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
-        {{/each}}
-        <div style="height:10px;width:100%;"></div>
+      <h4>Flagged users</h4>
+      <div class="compact-container">
+      {{#each flaggedUserData}}
+        <div class="content-box">
+          <div class="content-box-header">
+              <img class="postAuthorImage mr-2" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+              {{#if this.displayName}}
+                <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
+              {{else}}
+                <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
+              {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
+          </div>
+        </div>
+      {{/each}}
       </div>
       {{/if}}
       {{/if}}
 
       {{#if communitiesData}}
-      <h5>Communities{{#gt communitiesData.length 30}} <a class="user-list-toggle collapsed" href="#communitiesList"
-          data-toggle="collapse" role="button" aria-expanded="false" aria-controls="communitiesList"><i
-            class="fas fa-caret-right"></i></a>{{/gt}}</h5>
-      <div id="communitiesList" class="user-list{{#gt communitiesData.length 30}} collapse{{else}} d-flex{{/gt}}">
-        {{#each communitiesData}}
-        <a href="/community/{{this.slug}}" data-tooltip="{{this.name}}" class="tooltip-top"><img
-            src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/communities/cake.svg{{/if}}" /></a>
-        {{/each}}
-        <div style="height:10px;width:100%;"></div>
+      <h4>Communities</h5>
+      <div class="compact-container">
+      {{#each communitiesData}}
+        <div class="content-box">
+          <div class="content-box-header">
+            <img class="postAuthorImage mr-2" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/communities/cake.svg{{/if}}" />
+            <strong><a class="authorLink" href="/{{this.slug}}">{{this.name}}</a></strong>
+          </div>
+        </div>
+      {{/each}}
       </div>
-      {{/if}}
+    {{/if}}
     </div>
   </div>
 </div>
