Changed plus button color

--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -254,6 +254,7 @@ article.post:hover {
 
 .post-toolbar-button.have-plused {
   font-weight: bold;
+  color: $darker-pink;
 }
 
 .content-warning {
