--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
 
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/navbar-icons.css">
-  <link id="darkModeStylesheet" rel="stylesheet" href="">
+  <link id="dark-mode-stylesheet" rel="stylesheet" href="{{#eq loggedInUserData.settings.theme "dark"}}/css/dark-mode.css{{/eq}}">
 
   <script defer src="/fonts/fontawesome/js/all.min.js"></script>
 
