--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -36,7 +36,7 @@
       {{/eq}}
       {{/if}}
     </div>
-    <div id="connectionsBody" class="simple-panel user-container">
+    <div id="connectionsBody" class="pane user-container">
       <h3 class="page-header mx-2">Connections</h3>
       {{#and loggedIn trustedUserData }}
       {{#or userTrustsYou isOwnProfile}}
