--- a/scss/_dark-mode-colors.scss
+++ b/scss/_dark-mode-colors.scss
@@ -1,46 +1,63 @@
-$text: #fff; // Text for dark mode.
+$text: #ccc; // Text for dark mode.
 
-$background-white: #fff;
-$background-grey: #2d2d2d; // Page background
+$background-white: #fbfbfb;
+$background-grey: #181818; // Page background
 
-$lightest-grey: #3d3e44; // Form input backgrounds, comment content box backgrounds
-$light-grey: #aaa; // Subtle dividers, comment content box borders
-$medium-grey: #333333; // Post borders
-$dark-grey: #5e5d5d;
-$darkest-grey: #666; // Grey-colored text
+$medium-grey: #3f3f46;
+$lightest-grey: darken($medium-grey, 20%);
+$light-grey: darken($medium-grey, 15%);
+$dark-grey: lighten($medium-grey, 10%);
+$darkest-grey: lighten($medium-grey, 25%);
 
-$light-blue: #339fdb; // Links
+$light-blue: #339fdb;
 
 $light-yellow: #fcfaea; // Recent comment flash
 
 $bright-green: #46e146; // Recently active user markers
 
-$sweet-red: #ce1717; // The Best Red (TM). Hovers, buttons, etc.
+$sweet-red: darken(desaturate(#ce1717, 20%), 10%); // The Best Red (TM). Hovers, buttons, etc.
 $dark-red: darken($sweet-red, 10%);
-$lightest-pink: #fffafc;
+$lightest-pink: $light-grey;
 $light-pink: lighten($sweet-red, 40%);
 $darker-pink: lighten($sweet-red, 30%); // 'Recently commented' notifications
 $dark-pink: lighten($sweet-red, 20%);
 
+$link-color: $light-pink; // Links
+$link-hover-color: $dark-pink;
+
+$blockquote-color: $darkest-grey;
+
+$button-color: lighten(desaturate($dark-pink, 5%), 5%);
+$button-hover-color: $darker-pink;
+
 $bg-color: $background-grey;
-$dot-color: $lightest-grey;
-
+$dot-color: lighten($background-grey, 7%);
+ 
 $highlight: darken($sweet-red, 40%);
-$placeholder: $darkest-grey;
-$editor-background: $darkest-grey;
+$placeholder: $dark-grey;
+$editor-background: $light-grey;
 
-$navbar-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-$dropdown-shadow: 0 3px 8px rgba(0, 0, 0, .25);
-$post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
-$button-shadow: 2px 2px 3px rgba(0,0,0,0.15);
-$button-shadow-hover: 1px 1px 1px rgba(0,0,0,0.2);
+$navbar-shadow: 5px 5px 10px rgba(0,0,0,0.8);
+$dropdown-shadow: 0 3px 8px rgba(0, 0, 0,8);
+$post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8);
+$button-shadow: none;
+$button-shadow-hover: none;
 
-$navigation-background: #222222;
-$element-background: #0f0f0f;
-$page-background: #212224;
-$aside-background: #0f0f0f;
+$navigation-background: darken($background-grey, 5%);
+$element-background: #242424;
+$aside-background: $element-background;
 
-$navigation-border: $dark-pink;
-$navigation-text: rgba(255,255,255, 0.8);
-$navigation-active-text: $dark-pink;
-$navigation-hover-text: $sweet-red;
+$navigation-border: $dark-red;
+$navigation-text: rgba($text, 0.8);
+$navigation-active-text: $darker-pink;
+$navigation-hover-text: $dark-pink;
+
+$notification-background: $element-background;
+$notification-text: $text;
+$notification-active-background: darken($medium-grey, 5%);
+
+$comment-background: lighten($element-background, 5.10);
+
+$message-color: $light-pink;
+$message-background: $comment-background;
+$message-border: $light-pink;
