--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -58,13 +58,13 @@ strong {
 }
 
 a {
-    color: $light-blue;
+    color: $link-color;
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 
     &:hover {
-        color: $sweet-red;
+        color: $link-hover-color;
         text-decoration: underline;
     }
     // From Bootstrap: necessary?
@@ -96,7 +96,7 @@ ul {
 
 blockquote {
     border-left: 2px solid $medium-grey;
-    color: darken($dark-grey, 10%);
+    color: $blockquote-color;
     padding-left: 0.5rem;
     margin: 0.5rem 0;
 }
@@ -172,10 +172,10 @@ h6 {
     position: relative;
     padding: 0.75rem 1.25rem;
     margin-bottom: 1rem;
-    border: 1px solid $light-pink;
+    border: 1px solid $message-border;
     border-radius: 0.25rem;
-    background: $lightest-pink;
-    color: $dark-pink;
+    background: $message-background;
+    color: $message-color;
 
     &.alert {
         animation: pulse 2s infinite;
