--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -133,6 +133,13 @@
             <hr />
             <h4>Viewing</h4>
             <div class="form-group">
+                <label for="theme">Theme</label>
+                <select name="theme" id="theme">
+                    <option value="light" {{#eq loggedInUserData.settings.theme "light"}}selected{{/eq}}>Light</option>
+                    <option value="dark" {{#eq loggedInUserData.settings.theme "dark"}}selected{{/eq}}>Dark</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label for="homeTagTimelineSorting">Sorting of posts in Home and Tag timelines</label>
                 <select name="homeTagTimelineSorting" id="homeTagTimelineSorting">
                     <option value="chronological" {{#eq loggedInUserData.settings.homeTagTimelineSorting "chronological"}}selected{{/eq}}>Chronological (the time they were originally posted)</option>
